# magnum

./: dashboard.py  explore_data.py  main.py  pyproject.toml
config/: conversion_tables.yaml  manual_adjustments.yaml
data/: Converting MRF File to PTG 2025-2026 MRF3- Demand Conversion.xlsx  Inventory Process Overview.xlsx  PTG 2026 Actuals TMICC and CM or IMports 3.25.26--Converting Actual Supply Info.xlsx  meeting_transcript.md
generative-ui/: .gitignore  package.json  pnpm-lock.yaml
generative-ui/app/: globals.css  layout.tsx  page.tsx
generative-ui/app/api/chat/: route.ts
generative-ui/lib/: sop-library.tsx  tools.ts
generative-ui/scripts/: generate-prompt.ts
output/: PTG_Automated_Output.xlsx  cases_post_attain.csv  litons_post_attain.csv  matdi_phasing.csv  matdi_vs_target.csv  season_readiness.txt
pipeline/: calculate.py  extract.py  output.py  validate.py
python-server/: FLOWCHART.md  PITCH.md  explore_output.txt  map_transformations.py  ppt_export.py  pyproject.toml  server.py  transformation_map.txt
python-server/data/: Converting 3pm-Import and all RR to PTG MRF 3--Rapid Response Conversion.xlsx  Feb 2026 Inventory -- Actual Inventory Conversion.xlsx  PTG for 2026_MRF3_Send To Plants.xlsx
python-server/output/: PTG_Automated_Output.xlsx  inv_by_tech.csv  pallets_post_attain.csv  season_readiness.csv  tonnage_recap.csv
python-server/pipeline/: __init__.py  calculate.py  consolidate.py  transform.py
