[project]
name = "magnum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-pptx>=1.0.0",
]
